--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE  html>
 <html lang="ru">
 <head>
-    <title> </title>
+    <title>Мой блог </title>
 </head>
-<body>
+<p></p>
+    <body>
 </body>
 </html>
