--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ kmlmha → поддомен (уровень 3)
 б. ВЕСНА (k = 20)
 
 3. Шифрование фамилии с k = 10:
-ФКЪКЛЭГПЧФШ
+УЮВЮЦЧМК
 (если не считать букву ё)
 
 
