--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ ikigkigkhjyu → поддомен (уровень 3)
 
   <h2>3. Расшифровка</h2>
   <p>Расшифровываем: <code>M = C<sup>d</sup> mod n = 8<sup>3</sup> mod 15 = 512 mod 15 = 2</code></p>
-  <p>→ <strong>Исходное сообщение восстановлено!</strong> ✅</p>
+  <p style="font-family: 'Pudelinka', cursive;">→ <strong>Исходное сообщение восстановлено!</strong> ✅</p>
 
   <button onclick="decrypt()">Проверить расшифровку (8³ mod 15)</button>
   <div id="result"></div>
