--- a/index.html
+++ b/index.html
@@ -231,4 +231,24 @@ ikigkigkhjyu → поддомен (уровень 3)
   </script>
 
 </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Сайт с Пуделинкой</title>
+  <style>
+    @font-face {
+      font-family: 'Pudelinka';
+      src: url('pudelinka.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    body {
+      font-family: 'Pudelinka', Arial, sans-serif;
+    }
+  </style>
+</head>
+<body>
+  <h1>Привет, это Пуделинка!</h1>
+  <p>Весь текст теперь отображается шрифтом Pudelinka.</p>
+</body>
 </html>
